--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,7 +62,19 @@
         "typeinfo": "cpp",
         "unordered_map": "cpp",
         "utility": "cpp",
-        "vector": "cpp"
+        "vector": "cpp",
+        "any": "cpp",
+        "cinttypes": "cpp",
+        "clocale": "cpp",
+        "deque": "cpp",
+        "forward_list": "cpp",
+        "fstream": "cpp",
+        "iomanip": "cpp",
+        "list": "cpp",
+        "numeric": "cpp",
+        "queue": "cpp",
+        "stack": "cpp",
+        "valarray": "cpp"
     },
     "terminal.integrated.shell.windows": "cmd.exe"
 }
